--- a/src/app/components/reusablecomponents/header/header.component.html
+++ b/src/app/components/reusablecomponents/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="bg-gray-800 text-white py-4 px-8 flex justify-between items-center">
     <img routerLink="/customer" src="assets/logo.png" alt="AutoMed Logo" class="w-12 h-12 mr-2 cursor-pointer">
-    <h1 class="text-2xl font-bold cursor-pointer mx-auto" routerLink="/customer">AutoMed</h1>
+    <h1 class="text-2xl font-bold cursor-pointer mx-auto ml-2" routerLink="/customer">AutoMed</h1>
     <div>
       <button class="mr-4 px-4 py-2 rounded bg-blue-500 hover:bg-blue-600" routerLink="/orders">Your Orders</button>
       <button (click)="logout()" class="px-4 py-2 rounded bg-lime-500 hover:bg-lime-600">Log Out</button>
