--- a/src/app/components/customercomponents/customerform/customerform.component.html
+++ b/src/app/components/customercomponents/customerform/customerform.component.html
@@ -1,7 +1,8 @@
 <div class="flex justify-center items-center h-screen bg-gray-200">
+  <div class="absolute top-7 left-3 font-bold text-3xl ml-7">AutoMed</div>
   <div class="p-8 bg-white rounded-lg shadow-lg">
     <h2 class="text-2xl font-semibold mb-4">Details Form</h2>
-    <form class="grid grid-cols-2 gap-4" [formGroup]="customerForm" (ngSubmit)="save()">
+    <form class="grid grid-cols-2 gap-4" [formGroup]="customerForm">
 
         <div class="mb-4">
           <label class="block text-sm font-medium mb-2" for="age">Age</label>
@@ -9,7 +10,7 @@
           @if(customerForm.controls['age'].dirty ||  customerForm.controls['age'].invalid){
             <div *ngIf="customerForm.controls['age'].errors?.['required']" class="text-red-500">Age is required </div>
           }
-          
+
         </div>
 
         <div class="mb-4">
@@ -67,27 +68,7 @@
           }
         </div>
 
-        <div class="mb-4">
-          <label class="block text-sm font-medium mb-2" for="claim">claim</label>
-          <textarea id="claim" name="claim" formControlName="claim" class="w-full px-3 py-2 border rounded-md" placeholder="Enter your claim"></textarea>
-          @if(customerForm.controls['claim'].dirty || customerForm.controls['claim'].invalid){
-            <div *ngIf="customerForm.controls['claim'].errors?.['required']" class="text-red-500">Claim is required, enter 0 if none </div>
-          }
-        </div>
-
-        <div class="mb-4">
-          <label class="block text-sm font-medium mb-2" for="prescription">Branch Name</label>
-            <select id="branchId" name="branchId" [(ngModel)]="branchId" class="w-full px-3 py-2 border rounded-md">
-            <option value="">Select closest branch</option>
-            @for(branch of branches; track $index){
-              <option value="{{branch.BranchId}}">{{branch.BranchName}}</option>
-            }
-            </select>
-          <!-- @if(customerForm.controls['branchName'].dirty || customerForm.controls['branchName'].invalid){
-            <div *ngIf="customerForm.controls['branchName'].errors?.['required']" class="text-red-500">Branch Name is required </div>
-          } -->
-        </div>
-      <button [disabled]="customerForm.invalid" type="submit" class="col-span-2 w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600">Save Details</button>
+      <button (click)="save()" [disabled]="customerForm.invalid" type="submit" class="col-span-2 w-full bg-blue-500 text-white font-bold py-2 px-4 rounded-md hover:bg-blue-600">Save Details</button>
 
     </form>
 
