--- a/src/app/components/customercomponents/orders/orders.component.html
+++ b/src/app/components/customercomponents/orders/orders.component.html
@@ -1,18 +1,43 @@
 <app-header></app-header>
-<section class="container mx-auto mt-8">
-    <h2 class="text-2xl font-bold mb-4">Your Orders</h2>
-    @for(order of orders ; track $index){
-        <div class="flex justify-between items-center border-b py-2">
-            <div>
-              <h3 class="text-lg font-semibold">{{ order.OrderId }}</h3>
-            </div>
-            <div>
-              <p class="text-xl font-bold py-2">{{ order.TotalBill }}</p>
-              <button class="px-4 py-2 rounded bg-blue-500 hover:bg-blue-600 text-white"
-                      ><a routerLink="/cart">View Invoice</a></button>
-            </div>
-        </div>
-    }
-    
-</section>
-  
+<div class="w-full m-20 mt-5 mx-auto">
+  <div class="bg-white p-4 rounded-lg shadow mb-4 text-center">
+      <h2 class="text-3xl font-bold mb-4">Your Orders</h2>
+  </div>
+
+  <div *ngIf="orders.length == 0">
+      <h3>No Data To Show</h3>
+  </div>
+
+  <div class="absolute top-20 right-15 flex items-center justify-end w-full">
+    <button routerLink="/customer" routerLinkActive="router-link-active" class="bg-purple-500 hover:bg-purple-600 text-white text-xl font-bold py-3 px-4 rounded mx-10 my-5">Home</button>
+  </div>
+
+  <div *ngIf="orders.length > 0" class="flex mt-16 ml-5 mr-5 mx-10">
+      <table style="width: 100%; border-collapse: collapse;">
+          <thead>
+              <tr>
+                  <th style="border: 1px solid #ddd; padding: 8px;">Order Id</th>
+                  <th style="border: 1px solid #ddd; padding: 8px;">Customer Name</th>
+                  <th style="border: 1px solid #ddd; padding: 8px;">Medicines</th>
+                  <th style="border: 1px solid #ddd; padding: 8px;">Purchase Time</th>
+                  <th style="border: 1px solid #ddd; padding: 8px;">Total Bill</th>
+                  <th style="border: 1px solid #ddd; padding: 8px;">Branch</th>
+                  <th style="border: 1px solid #ddd; padding: 8px;">Action</th>
+              </tr>
+          </thead>
+          <tbody>
+              <tr *ngFor="let order of orders">
+                  <td style="border: 1px solid #ddd; padding: 8px; text-align: center;">{{ order.OrderId }}</td>
+                  <td style="border: 1px solid #ddd; padding: 8px; text-align: center;">{{ customerName }}</td>
+                  <td style="border: 1px solid #ddd; padding: 8px; text-align: center;">{{ order.orders }}</td>
+                  <td style="border: 1px solid #ddd; padding: 8px; text-align: center;">{{ order.PurchaseTime | date: "dd-MM-YYYY" }}</td>
+                  <td class="font-medium" style="border: 1px solid #ddd; padding: 8px; text-align: center;">₹ {{ order.TotalBill }}</td>
+                  <td style="border: 1px solid #ddd; padding: 8px; text-align: center;">{{ this.branchName.get(order.BranchId) }}</td>
+                  <td style="border: 1px solid #ddd; padding: 5px; text-align: center;">
+                    <button (click)="viewInvoice(order.OrderId)" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded mx-5 my-2">View Bill</button>
+                  </td>
+              </tr>
+          </tbody>
+      </table>
+  </div>
+</div>
