--- a/src/app/components/superadmincomponents/branchdetailsform/branchdetailsform.component.html
+++ b/src/app/components/superadmincomponents/branchdetailsform/branchdetailsform.component.html
@@ -1,4 +1,5 @@
 <div class="flex justify-center items-center h-screen bg-gray-200">
+  <div class="absolute top-7 left-3 font-bold text-3xl ml-7">AutoMed</div>
     <div class="p-8 bg-white rounded-lg shadow-lg">
         <h2 class="text-2xl font-semibold mb-4">Add New Branch</h2>
         <form>
